remove threadIterations from settings